# plusvalia-ai

./: .gitignore  CONCENTRADO_SISTEMA_IA_INMOBILIARIO.txt  README.md
geo-app/python_services/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celery_app.py  check_data.py  config.py  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  fix_and_rerun.py  fix_constraint.py  generar_predicciones_simple.py  generar_predicciones_solo.py  generate_training_data.py  pipeline_32_states_mexico.py  pipeline_entrenamiento_completo.py  pyproject.toml  reentrenar_y_generar_predicciones.py  requirements.txt  run_scraping_training.py  start_api.ps1  test_api_demo.py  train_extensive_model.py  train_model_from_csv.py  upload_to_supabase.py  verificar_estado.py
geo-app/python_services/api/: deps.py  main.py  schemas.py
geo-app/python_services/data/: process_gobierno_data.py
geo-app/python_services/integrations/: inegi_client.py  prompt_registry.py
geo-app/python_services/middleware/: auth.py  circuit_breaker.py  redis_cache.py  redis_client.py  security.py
geo-app/python_services/ml_model/: ageb_enrichment.py  bias_evaluator.py  data_validator.py  h3_features.py  hierarchical_model.py  lightgbm_model.py  model_config.yaml  model_registry.py  ndvi_features.py  optuna_tuner.py  predictor.py  property_type_models.py  seasonal_model.py  spatial_features.py  tourism_features.py
geo-app/python_services/scrapers/: cenapred_risk_scraper.py  conapo_marginacion_scraper.py  conavi_ruv_scraper.py  denue_scraper.py  inegi_api_scraper.py  (+19 more)
(+313 files in other folders)
