[project]
name = "geo-app-backend"
version = "1.0.0"
description = "Backend ML API for real estate market analysis"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["api", "ml_model", "middleware", "integrations", "scrapers"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "ml_model", "middleware", "integrations"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
